--- a/lang/Cargo.toml
+++ b/lang/Cargo.toml
@@ -1,31 +1,12 @@
 [package]
 
-name = "rtoys"
+name = "lang"
 version = "0.0.2"
 edition = "2021"
 authors = ["Shailesh Kumar <shailesh@indigits.com>"]
 
 
-# The development profile, used for `cargo build`
-[profile.dev]
-opt-level = 0  # Controls the --opt-level the compiler builds with
-debug = true   # Controls whether the compiler passes -g or `--cfg ndebug`
-
-# The release profile, used for `cargo build --release`
-[profile.release]
-opt-level = 3
-debug = false
-
-# The testing profile, used for `cargo test`
-[profile.test]
-opt-level = 0
-debug = true
-
-# The benchmarking profile, used for `cargo bench`
-[profile.bench]
-opt-level = 3
-debug = false
 
 [lib]
-name = "rtoys"
+name = "lang"
 
